<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.grau.organizer.activities.EditorActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@android:drawable/screen_background_light_transparent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cancel_black_24dp"
                android:id="@+id/editor_toolbar_cancel"
                android:background="@color/colorPrimary"
                android:tint="@color/mdtp_white"
               />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_editor_termin"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textAlignment="center" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_save_24dp"
                android:id="@+id/editor_toolbar_save"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="20dp"
                android:tint="@color/mdtp_white"
               />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.grau.organizer.activities.EditorActivity">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:id="@+id/editor_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/layout_hint_eventName" />
            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect|textMultiLine"
                android:id="@+id/editor_description"
                android:layout_marginTop="10dp"
                android:hint="@string/layout_editor_descriptionhint"
                android:elegantTextHeight="true" />
            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switchAllDayText"
                android:layout_gravity="center"
                android:id="@+id/sw_allDay" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp">

                <Button
                    android:drawableLeft="@drawable/ic_event_date_24dp"
                    android:drawablePadding="20dp"
                    android:id="@+id/editor_btn_pickdate"
                    android:text="@string/defaultDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

                <Button
                    android:id="@+id/editor_btn_picktime"
                    android:text="@string/defaultTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/layout_enddate"
                android:layout_height="40dp">

                <Button
                    android:drawableLeft="@drawable/ic_event_date_reverse_24dp"
                    android:drawablePadding="20dp"
                    android:id="@+id/editor_btn_pickdate_fin"
                    android:text="@string/defaultDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

                <Button
                    android:id="@+id/editor_btn_picktime_fin"
                    android:text="@string/defaultTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
            </LinearLayout>
            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp">
                <Button
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_category"
                    android:layout_weight="1.00"
                    android:drawableLeft="?android:attr/actionModePasteDrawable" />

                <Button
                    android:drawableLeft="@drawable/ic_priority_24dp"
                    android:text="@string/editor_btn_priority"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_priority"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

            </LinearLayout>

            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp">

                <Button
                    android:drawableLeft="@drawable/ic_notification_24dp"
                    android:id="@+id/editor_btn_picknotifydelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/editor_btn_picknotifydelay" />

                <Button
                    android:drawableLeft="@drawable/ic_action_phone_24dp"
                    android:text="@string/layout_button_addAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.54"
                    android:id="@+id/editor_btn_chooseaction" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editor_notecontainer">
            </LinearLayout>

            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/tagListEmpty"
                    android:layout_width="257dp"
                    android:layout_height="match_parent"
                    android:id="@+id/editor_tags" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_tags_delete"
                    android:layout_weight="1"
                    android:background="@drawable/ic_delete_black_24dp"
                    android:elevation="0dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_tags_add"
                    android:background="@drawable/ic_add_circle_black_24dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:drawableLeft="@drawable/ic_node_add_black_24dp"
                    android:text="@string/layout_button_addNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_addnote"
                    android:layout_marginTop="10dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

