...


    <string name="menuEdit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="accept">Akzeptieren</string>
    <string name="ok">OK</string>

    <string name="layout_button_addAction">Aktion hinzufügen</string>
    <string name="execute_action">Aktion durchführen</string>

    <string name="createTestEvents">Erzeuge Testevents</string>

...
    <string name="eventtitle">Title</string>
    <string name="eventdescription">Beschreibung</string>
    <string name="layout_editor_descriptionhint">Beschreibung</string>
    <string name="layout_eventName">Name des Eintrags</string>
    <string name="layout_hint_eventName">Name</string>

    <string name="layout_button_addNote">Notiz hinzufügen</string>
    <string name="layout_editor_notehint">Notiz</string>

    <string name="remember_interval_min">Erinnerungsintervall (min)</string>
    <string name="editor_btn_picknotifydelay">Keine</string>

    <string name="layout_dateTime">Datum und Uhrzeit</string>
...
