<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.grau.organizer.fragments.MonthFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <!--
    <CalendarView
        android:layout_width="match_parent"
        android:id="@+id/calendarView"
        android:elevation="1dp"
        android:theme="@style/AppTheme"
        android:background="@android:color/holo_blue_dark"
        android:layout_height="300dp" />
        -->
    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:layout_width="match_parent"
        android:id="@+id/calendarView"
        app:mcv_tileSize="35dp"
        app:mcv_tileWidth="match_parent"
        app:mcv_firstDayOfWeek="monday"
        android:theme="@style/AppTheme"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/month_list_view"/>

</LinearLayout>
